apply plugin: 'java'

sourceCompatibility = 11
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}


compileJava {
    options.compilerArgs += ["--add-exports", "javafx.base/com.sun.javafx=ALL-UNNAMED"]
    options.compilerArgs += ["--add-exports", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"]
}

compileTestJava {
    options.compilerArgs += ["--add-exports", "javafx.base/com.sun.javafx=ALL-UNNAMED"]
    options.compilerArgs += ["--add-exports", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"]
}

processResources {
    from ('src/main/java') {
        include '**/*.fxml'
        include '**/*.css'
    }
}

def mainClass = 'com.dansoftware.libraryapp.main.Main'

jar {
    manifest {
       attributes 'Main-Class': mainClass
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')

    implementation("org.xerial:sqlite-jdbc:3.30.1")

    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'org.controlsfx', name:'controlsfx', version: '11.0.1'
    compile group: 'org.json', name: 'json', version: '20190722'
	compile fileTree(dir: 'external-libraries', include: '*.jar')
}
